<resources>
    <string name="app_name">Agrohub</string>
    <string name="onboarding_text">Onbording</string>
    <string name="skip_btn">skip</string>
    <string name="next_btn">Next</string>
    <string name="Prev_btn">Prev</string>
    <string name="register">Register</string>
    <string name="password">Enter Your Password</string>
    <string name="mobileno">Phone no</string>
    <string name="username">Your Name</string>
    <!--    regpage strings-->
    <string-array name="account_types_array">
        <item>Farmer</item>
        <item>Organization</item>
        <item>Expert</item>
    </string-array>
    <string name="onboarding_page_1">Welcome to AgroHub!</string>
    <string name="onboarding_page_2">Manage Your Tasks</string>
    <string name="onboarding_page_3">Connect with Experts</string>
    <string name="onboarding_page_4"> Never Miss a Task Again</string>

    <string name="first">Join our community of farmers and experts to enhance your farming experience. Get access to a wide range of tools and resources that will help you improve your crop yield and boost your profits.</string>
    <string name="third">Get access to expert advice on farming techniques, pest control, and more through our platform. Connect with other farmers and experts to get answers to all your farming-related queries.</string>
    <string name="Second">" Plan your farming activities efficiently with our crop calendar. Get information on the best time to plant, harvest and apply fertilizers and pesticides for each crop in your region."</string>
    <string name="fourth">Stay on top of your farming tasks with our todo list feature. Create a list of tasks to be completed and set reminders to ensure that you never miss an important task.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Type of organisation -->
    <string name="organization_type_prompt">Select organization type</string>

    <string-array name="organization_types">
        <item>Corporation</item>
        <item>non-profit</item>
        <item>government agency</item>
        <item>Etc</item>
    </string-array>
    <string-array name="area_unit_array">
        <item>hectares</item>
        <item>acres</item>
        <item>dismil</item>
    </string-array>

    <string-array name="quantity_unit_array">
        <item>kg</item>
        <item>tons</item>
        <item>pieces</item>
        <item>liters</item>
    </string-array>

    <string name="don_t_have_an_account_click_here">Don\'t have an account? Click Here</string>
    <string name="already_registered_click_here">Already Registered? Click Here</string>
    <string name="select_crop_name" />

</resources>